--- a/views/artists/artists_index.erb
+++ b/views/artists/artists_index.erb
@@ -1,13 +1,15 @@
 
 <p>
-  <a href="/artists/new">Add new user</a>
+  <a href="/artist/new">Add new user</a>
 </p>
 
-<% @all_artist.each do |u| %>
+<% @all_artists.each do |u| %>
   <%#
     So here, `u` is a User object (meaning it's an *instance* of the
     User class). So we can run *instance* methods on `u`.
   %>
 
   <p>
-    <a href="/artists/<%= u.id %>"><%= u.name %></a>
+    <a href="/artist/<%= u.id %>"><%= u.name %></a
+      
+      <% end %>
