--- a/views/artists/artists_new.erb
+++ b/views/artists/artists_new.erb
@@ -5,7 +5,7 @@
   The request created by this form's submission will go to
   "/users/create" and the HTTP verb will be "post".
 -->
-<form action="/artists/create" method="post">
+<form action="/artist/create" method="post">
   <p>Artist Name: <input type="text" name="name"></p>
   
   
