--- a/views/artists/artists_show.erb
+++ b/views/artists/artists_show.erb
@@ -1,3 +1,3 @@
 <h1><%= @artist.name %>'s Details</h1>
 
-<a href="/artists/<%= @artist.id %>/edit">Edit this user.</a>
+<a href="/artist/<%= @artist.id %>/edit">Edit this user.</a>
