--- a/views/home.erb
+++ b/views/home.erb
@@ -1,8 +1,9 @@
 <h1>Welcome, find an Event, Artist or Venue!</h1>
 
 
-<p><a href="/events" View Events</a>
-<a href="/artists" View Artists</a>
-<a href="/venues" View Venues</a>
+<ul>
+<li><a href="/events"> View Events</a></li>
+<li><a href="/artist/index"> View Artists</a></li>
+<li><a href="/venues/index"> View Venues</a></li>
 
-</p>
+</ul>
