--- a/views/venues/venues_show.erb
+++ b/views/venues/venues_show.erb
@@ -1,3 +1,5 @@
-<h1><%= @venue.name %>'s Details</h1>
+<h1><%= @venues.name %>'s Details</h1>
 
-<a href="/venues/<%= @venue.id %>/edit">Edit this Venue.</a>
+<p> <%= @venues.city %>, <%= @venues.country %> </p>
+
+<a href="/venues/<%= @venues.id %>/edit">Edit this Venue</a>
