--- a/views/events/events_new.erb
+++ b/views/events/events_new.erb
@@ -4,9 +4,8 @@
   The request created by this form's submission will go to
   "/users/create" and the HTTP verb will be "post".
 -->
-<form action="/events/create" method="post">
+<form action="/artist/:id/events/create" method="post">
   <p>Event Title: <input type="text" name="title"></p>
-  <p>Artist Name: <input type="text" name="artist_name"></p>
   <p>Venue Name: <input type="text" name="venue_name"></p>
   
   
