--- a/views/events/events_show.erb
+++ b/views/events/events_show.erb
@@ -1,3 +1,3 @@
-<h1><%= @event.name %>'s Details</h1>
+<h1><%= @event.title %>'s Details</h1>
 
-<a href="/events/<%= @event.id %>/edit">Edit this Event.</a>
+<a href="/artist/:id/events/<%= @event.id %>/edit">Edit this Event.</a>
