--- a/views/venues/venues_create.erb
+++ b/views/venues/venues_create.erb
@@ -1,6 +1,6 @@
 
 <h1>Success!</h1>
 
-<p>Made a new venue with name <%= @venue.name %>.</p>
+<p>Made a new venue with name <%= @venues.name %>.</p>
 
 <a href="/">Return to main list.</a>
