--- a/views/venues/venues_edit.erb
+++ b/views/venues/venues_edit.erb
@@ -4,10 +4,10 @@
   The request created by this form's submission will go to
   "/users/:id/edit" and the HTTP verb will be "post".
 -->
-<form action="/venues/<%= @venue.id %>/update" method="post">
-  <p>Name: <input type="text" name="name" value="<%= @venue.name %>"></p>
-  <p>City: <input type="text" name="city" value="<%= @venue.city %>"></p>
-  <p>Country: <input type="text" name="country" value="<%= @venue.country %>"></p>
+<form action="/venues/<%= @venues.id %>/update" method="post">
+  <p>Name: <input type="text" name="name" value="<%= @venues.name %>"></p>
+  <p>City: <input type="text" name="city" value="<%= @venues.city %>"></p>
+  <p>Country: <input type="text" name="country" value="<%= @venues.country %>"></p>
   
   <!--
     The values that this form submits will be stored in a
