--- a/views/events/events_new.erb
+++ b/views/events/events_new.erb
@@ -5,10 +5,10 @@
   "/users/create" and the HTTP verb will be "post".
 -->
 
-<form action="/artist/:id/events/create" method="post">
+<form action="/events/create" method="post">
   <p>Event Title: <input type="text" name="title"></p>
   <p>Venue Name: <input type="text" name="venue_name"></p>
-  
+  <p>Artist: <input type="text" name="artist_name"></p>
   
   <!--
     The values that this form submits will be stored in a
