--- a/views/events/events_create.erb
+++ b/views/events/events_create.erb
@@ -1,6 +1,6 @@
 
 <h1>Success!</h1>
 
-<p>Made a new event with name <%= @event.name %>.</p>
+<p>Made a new event with name <%= @event.title %>.</p>
 
 <a href="/">Return to main list.</a>
