--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My Site</title>
+  <title>Concert Finder</title>
   <meta name="description" content="">
   
+  <link rel="stylesheet" href="/normalize.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/global.css" type="text/css" media="screen" charset="utf-8">
 </head>
 
 <body>
   <%= yield %>
 </body>
+
 </html>
