Restructured nav bar & added home pg image

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,9 +1,13 @@
-<h1>Welcome, find an Event, Artist or Venue!</h1>
+<h1>Find an Event, Artist or Venue!</h1>
 
+    <div id="body image">
+      
+      <img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Justice_in_concert.jpg"></img>
+      
+        <ul>
+          <li><a href="/events"> View Events</a></li>
+          <li><a href="/artist/index"> View Artists</a></li>
+          <li><a href="/venues/index"> View Venues</a></li>
+        </ul>
 
-<ul>
-<li><a href="/events"> View Events</a></li>
-<li><a href="/artist/index"> View Artists</a></li>
-<li><a href="/venues/index"> View Venues</a></li>
-
-</ul>
+    </div>
