Added layout background color

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,8 @@
-<h1>Find an Event, Artist or Venue!</h1>
 
-    <div id="body image">
+
+<div id="body_image">
+      
+      <h1>Find an Event, Artist or Venue!</h1>
       
       <img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Justice_in_concert.jpg"></img>
       
