--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,14 @@
+body{
+  background-color: #585464;
+}
 
 header{
   width: 100%;
   height: 130px;
   background-color: #1C1C1C;
+/*border-bottom: 10px;
+  border-bottom color: #FFC300; 
+  */
 }
 
 header #logo{
@@ -15,7 +21,7 @@ header #logo{
 }
 
 header #logo h1{
-  margin: -.40em;
+  margin: -.30em;
 }
 
 header #logo a{
@@ -23,8 +29,7 @@ header #logo a{
   font-family: 'Damion', cursive;
   text-decoration: none;
   font-size: 2.2em;
-  margin-left: 30px;
-  
+  margin-left: 30px; 
 }
 
 header #links{
@@ -47,6 +52,15 @@ header #links li{
 header #links a{
   color: #FFC300;
   text-decoration: none;
+}
+
+#body_image ul li a{
+  font-family: 'Exo', sans-serif;
+  color: #FFC300;
+}
+
+#body_image h1{
+  font-family: 'Exo', sans-serif;
 }
 
 
