--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,8 @@
-
-
-<div id="body_image">
+<div id="home_page">
+      
+      <img class="body_image"img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Justice_in_concert.jpg"></img>
       
       <h1>Find an Event, Artist or Venue!</h1>
-      
-      <img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Justice_in_concert.jpg"></img>
       
         <ul>
           <li><a href="/events"> View Events</a></li>
