Removed nested routes and added .js files

--- a/views/artists/artists_create.erb
+++ b/views/artists/artists_create.erb
@@ -3,4 +3,4 @@
 
 <p>Made a new artist with name <%= @artist.name %>.</p>
 
-<a href="/">Return to main list.</a>
+<a href="/artist/index">Return to main list.</a>
