--- a/views/artists/artists_index.erb
+++ b/views/artists/artists_index.erb
@@ -8,8 +8,15 @@
     So here, `u` is a User object (meaning it's an *instance* of the
     User class). So we can run *instance* methods on `u`.
   %>
-
-  <p>
-    <a href="/artist/<%= u.id %>"><%= u.name %></a
+    
+<ul>
+  
+    <li>
+      <a href="/artist/<%= u.id %>"><%= u.name %></a>
+    </li>
       
-      <% end %>
+    
+      
+</ul>
+
+  <% end %>
