--- a/views/events/events_create.erb
+++ b/views/events/events_create.erb
@@ -3,4 +3,4 @@
 
 <p>Made a new event with name <%= @event.title %>.</p>
 
-<a href="/">Return to main list.</a>
+<a href="/events">Return to main list.</a>
