--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,14 @@
   
   <link rel="stylesheet" href="/normalize.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/global.css" type="text/css" media="screen" charset="utf-8">
+
+<!--TODO CHECK to make sure JS file paths are correct -->
+  <script type="text/javascript" src="../jquery.js"></script>
+  <script type="text/javascript" src="../main.js"></script>
+  
   <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
+  
+  
   
 </head>
 
