--- a/views/venues/venues_create.erb
+++ b/views/venues/venues_create.erb
@@ -3,4 +3,4 @@
 
 <p>Made a new venue with name <%= @venues.name %>.</p>
 
-<a href="/">Return to main list.</a>
+<a href="/venues/index">Return to main list.</a>
