--- a/views/venues/venues_new.erb
+++ b/views/venues/venues_new.erb
@@ -6,9 +6,9 @@
   "/users/create" and the HTTP verb will be "post".
 -->
 <form action="/venues/create" method="post">
-  <p>Name: <input type="text" name="name" value="<%= @venues.name %>"></p>
-  <p>City: <input type="text" name="city" value="<%= @venues.city %>"></p>
-  <p>Country: <input type="text" name="country" value="<%= @venues.country %>"></p>
+  <p>Name: <input type="text" name="name"></p>
+  <p>City: <input type="text" name="city"></p>
+  <p>Country: <input type="text" name="country"></p>
   
   
   <!--
