Began customizing jQuery form validation

--- a/views/events/events_all.erb
+++ b/views/events/events_all.erb
@@ -32,7 +32,7 @@
     
 <h3>Add an Event for New Artist:</h3>
 
-<form action="/events/create" method="post">
+<form action="/events/create" form class="add_event_new_artist" method="post">
  <p>Event Title: <input type="text" name="title"></p>
  <p>Venue Name: <input type="text" name="venue_name"></p>
  <p>Artist: <input type="text" name="artist_name"></p>
